--- a/gOfertas/Base.lproj/Main.storyboard
+++ b/gOfertas/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
@@ -31,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="rld-7H-3gC">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="rld-7H-3gC">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rld-7H-3gC" id="vdu-8x-v3L">
@@ -57,6 +58,11 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dMw-Al-32Y">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="c62-hP-pqZ" kind="relationship" relationship="rootViewController" id="ojm-aW-U2t"/>
@@ -66,25 +72,102 @@
             </objects>
             <point key="canvasLocation" x="543" y="670"/>
         </scene>
-        <!--Home-->
+        <!--GOfertas-->
         <scene sceneID="6yo-Gv-8al">
             <objects>
-                <viewController id="c62-hP-pqZ" customClass="Home" sceneMemberID="viewController">
+                <viewController title="GOfertas" id="c62-hP-pqZ" customClass="Home" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="y7U-6R-q9y">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="khG-59-eFV">
-                        <barButtonItem key="leftBarButtonItem" systemItem="play" id="uTb-0s-84s"/>
+                    <navigationItem key="navigationItem" title="GOfertas" id="khG-59-eFV">
+                        <barButtonItem key="leftBarButtonItem" image="slide.png" id="uTb-0s-84s"/>
+                        <barButtonItem key="rightBarButtonItem" title="Lista" id="qvO-4Q-ac0">
+                            <connections>
+                                <segue destination="fS9-8U-evb" kind="push" id="OhF-C4-Edj"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="sidebarButton" destination="uTb-0s-84s" id="4FE-Ci-dRc"/>
+                        <segue destination="Xdi-AJ-fwU" kind="modal" identifier="Reportar" id="VOA-rL-2Ai"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iGh-MC-NtM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1034" y="680"/>
         </scene>
+        <!--Reportar Oferta-->
+        <scene sceneID="K8p-1K-mVe">
+            <objects>
+                <viewController id="Xdi-AJ-fwU" customClass="ReportarOferta" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7kt-Gu-JV1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="50p-dJ-Kk9">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" id="0bl-6S-PCA">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="barTintColor" red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Reportar Oferta" id="wOV-oP-aZK">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="jJP-X5-Tn7">
+                                            <connections>
+                                                <action selector="cancelar:" destination="Xdi-AJ-fwU" id="nIC-QG-sOH"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qG2-yd-Bha" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1034" y="1437"/>
+        </scene>
+        <!--Ofertas Cercanas-->
+        <scene sceneID="bgB-RV-nW4">
+            <objects>
+                <tableViewController title="Ofertas Cercanas" id="fS9-8U-evb" customClass="OfertasCercanas" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="68e-Fy-hVy">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="m1n-Vf-cIy">
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="m1n-Vf-cIy" id="png-7d-7R8">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="fS9-8U-evb" id="Ujv-2C-WQH"/>
+                            <outlet property="delegate" destination="fS9-8U-evb" id="NMl-Vs-dNu"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Ofertas Cercanas" id="rVo-1N-kPd"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k6p-H5-gVa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1438" y="679"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="slide.png" width="22" height="22"/>
+    </resources>
 </document>
